--- a/less/template.less
+++ b/less/template.less
@@ -1,6 +1,6 @@
-@import "variables.less";
-@import "mixins.less";
-@import "bootstrap.less";
+@import "variables";
+@import "mixins";
+@import "bootstrap";
 
 body {
   background-color: @backgroundColor;
