--- a/less/template.less
+++ b/less/template.less
@@ -2,12 +2,7 @@
 @import "mixins";
 @import "bootstrap";
 
-body {
-  background-color: @backgroundColor;
-  color: @primaryColor;
-}
-#wrapper {
-  height: auto;
-  min-height: 200px;
-  background-color: @deepSkyBlue;
+img{
+  max-width: @maxWidth;
+  height: @auto;
 }
