--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -1,2 +1,2 @@
-@import "bootstrap/bootstrap";
-@import "bootstrap/responsive";
+@import "bootstrap/bootstrap.less";
+@import "bootstrap/responsive.less";
