--- a/less/template.less
+++ b/less/template.less
@@ -1,6 +1,6 @@
-@import "variables";
-@import "mixins";
-@import "bootstrap";
+@import "variables.less";
+@import "mixins.less";
+@import "bootstrap.less";
 
 img{
   max-width: @maxWidth;
