--- a/css/template.css
+++ b/css/template.css
@@ -6086,9 +6086,9 @@ img {
   height: auto;
 }
 h1 {
-  background: #0e0572;
-  border-bottom: 1px solid #4138a5;
-  border-top: 1px solid #00003f;
+  background: #a41c30;
+  border-bottom: 1px solid #d74f63;
+  border-top: 1px solid #710000;
   color: white;
   font-family: Helvetica, sans-serif;
   padding: 3px;
