Updating LESSphp, Bootstrap 3 and mixins.less

--- a/less/template.less
+++ b/less/template.less
@@ -1,5 +1,3 @@
-@import "variables.less";
-@import "mixins.less";
 @import "bootstrap.less";
 
 img{
@@ -7,7 +5,7 @@ img{
   height: @auto;
 }
 
-@h1BG: #a41c30;
+@h1BG: #ff0000;
 h1 {
   background: @h1BG;
   border-bottom: 1px solid @h1BG + #333;
@@ -16,3 +14,4 @@ h1 {
   font-family: Helvetica, sans-serif;
   padding: 3px;
 }
+
