--- a/less/bootstrap/mixins.less
+++ b/less/bootstrap/mixins.less
@@ -55,7 +55,8 @@
 // Placeholder text
 .placeholder(@color: @input-color-placeholder) {
   &:-moz-placeholder            { color: @color; } // Firefox 4-18
-  &::-moz-placeholder           { color: @color; } // Firefox 19+
+  &::-moz-placeholder           { color: @color;   // Firefox 19+
+                                  opacity: 1; } // See https://github.com/twbs/bootstrap/pull/11526
   &:-ms-input-placeholder       { color: @color; } // Internet Explorer 10+
   &::-webkit-input-placeholder  { color: @color; } // Safari and Chrome
 }
@@ -730,7 +731,7 @@
       padding-right: (@grid-gutter-width / 2);
     }
   }
-  .col(1); // kickstart it
+  .col(1,'.col'); // kickstart it
 }
 
 .make-grid-columns-float(@class) {
@@ -747,7 +748,7 @@
       float: left;
     }
   }
-  .col(1); // kickstart it
+  .col(1,'.col'); // kickstart it
 }
 
 .calc-grid(@index, @class, @type) when (@type = width) and (@index > 0) {
